# otito

./: .buildinfo  .flake8  .pre-commit-config.yaml  LICENSE  README.md  api.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  test_main.py  test_numpy.py  test_pytorch.py  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  usage.doctree
.doctrees/metrics/: metrics.doctree
.doctrees/metrics/numpy/: numpy_api.doctree
.doctrees/metrics/pytorch/: pytorch_api.doctree
.github/workflows/: deploy_documentation.yaml  pull_request_doc_check.yaml
_sources/: index.rst.txt
_sources/metrics/pytorch/: pytorch_api.rst.txt
docs/: Makefile  README.md  _sidebar.md  requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/_templates/: metric_class.rst
docs/source/metrics/: metrics.rst
docsify-docs/: _sidebar.md
docsify-docs/metrics/: README.md
metrics/: metrics.html
metrics/numpy/: numpy_api.html
metrics/numpy/classification/: numpy_classification.html
metrics/pytorch/: pytorch_api.html
metrics/pytorch/classification/: pytorch_classification.html
otito/base/: _base_metric.py
otito/base/classification/: accuracy.py
otito/base/numpy/: base_numpy_metric.py
otito/base/pytorch/: base_pytorch_metric.py
otito/base/tensorflow/: base_tensorflow_metric.py
otito/classification/: accuracy.py
otito/metrics/: __init__.py  _accuracy.py  _base_metric.py  accuracy.py  utils.py
otito/validation/: base_validators.py  utils.py
tests/: test_utils.py
(+46 files in other folders)
