[tool.poetry]
name = "otito"
version = "0.0.1"
description = "A tool to understand the performance and behaviour of ml models."
authors = ["Benjamin Ajayi-Obe", "benobe22@gmail.com"]
readme = "README.md"
packages = [{include = "otito"}]

[tool.poetry.dependencies]
python = "^3.8.0"
numpy = ">1.17.3"
pydantic = "^1.10.0"
scikit-learn = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
flake8 = "^5.0.0"
black = ">22.1.0"
pre-commit = "^2.20.0"
flake8-typing-imports = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
